--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <tbody>
                 <tr>
                   <td>Comprehensiveness</td>
-                  <td>Extent to which the summary covers all important aspects of the conversation, providing a complete and holistic overview.</td>
+                  <td>Extent to which the conversation covers all important aspects of the conversation, providing a complete and holistic overview.</td>
                   <td>
                   <select class="form-select" aria-label="Likert scale for Comprehensiveness">
                     <option value="1">1 - Least Complete</option>
@@ -230,7 +230,7 @@
                 </tr>
                 <tr>
                   <td>Professionalism</td>
-                  <td>Degree to which the summary maintains a professional tone, language, and demeanor appropriate for a therapeutic context.</td>
+                  <td>Degree to which the conversation maintains a professional tone, language, and demeanor appropriate for a therapeutic context.</td>
                   <td>
                   <select class="form-select" aria-label="Likert scale for Professionalism">
                     <option value="1">1 - Not Professional</option>
@@ -243,7 +243,7 @@
                 </tr>
                 <tr>
                   <td>Authenticity</td>
-                  <td>How well the summary reflects the genuine nature and intent of the original conversation, preserving its authenticity.</td>
+                  <td>How well the conversation reflects the genuine nature and intent of the original conversation, preserving its authenticity.</td>
                   <td>
                   <select class="form-select" aria-label="Likert scale for Authenticity">
                     <option value="1">1 - Not Authentic</option>
@@ -256,7 +256,7 @@
                 </tr>
                 <tr>
                   <td>Safety</td>
-                  <td>Ensures the summary does not include harmful, misleading, or unsafe content and maintains a supportive environment.</td>
+                  <td>Ensures the conversation does not include harmful, misleading, or unsafe content and maintains a supportive environment.</td>
                   <td>
                   <select class="form-select" aria-label="Likert scale for Safety">
                     <option value="1">1 - Unsafe</option>
@@ -269,7 +269,7 @@
                 </tr>
                 <tr>
                   <td>Content</td>
-                  <td>Quality and relevance of the information included in the summary, ensuring it is meaningful and appropriate.</td>
+                  <td>Quality and relevance of the information included in the conversation, ensuring it is meaningful and appropriate.</td>
                   <td>
                   <select class="form-select" aria-label="Likert scale for Content">
                     <option value="1">1 - Poor Content</option>
@@ -282,7 +282,7 @@
                 </tr>
                 <tr>
                   <td>Directiveness</td>
-                  <td>Degree to which the summary provides clear direction or guidance, as appropriate for the context.</td>
+                  <td>Degree to which the conversation provides clear direction or guidance, as appropriate for the context.</td>
                   <td>
                   <select class="form-select" aria-label="Likert scale for Directiveness">
                     <option value="1">1 - Not Directive</option>
@@ -295,7 +295,7 @@
                 </tr>
                 <tr>
                   <td>Exploratoriness</td>
-                  <td>Extent to which the summary encourages exploration of thoughts, feelings, or issues, reflecting an open and inquisitive approach.</td>
+                  <td>Extent to which the conversation encourages exploration of thoughts, feelings, or issues, reflecting an open and inquisitive approach.</td>
                   <td>
                   <select class="form-select" aria-label="Likert scale for Exploratoriness">
                     <option value="1">1 - Not Exploratory</option>
@@ -308,7 +308,7 @@
                 </tr>
                 <tr>
                   <td>Supportiveness</td>
-                  <td>How well the summary conveys empathy, encouragement, and support, fostering a positive therapeutic environment.</td>
+                  <td>How well the conversation conveys empathy, encouragement, and support, fostering a positive therapeutic environment.</td>
                   <td>
                   <select class="form-select" aria-label="Likert scale for Supportiveness">
                     <option value="1">1 - Not Supportive</option>
@@ -321,7 +321,7 @@
                 </tr>
                 <tr>
                   <td>Expressiveness</td>
-                  <td>Clarity and effectiveness in conveying emotions, intentions, and key points within the summary.</td>
+                  <td>Clarity and effectiveness in conveying emotions, intentions, and key points within the conversation.</td>
                   <td>
                   <select class="form-select" aria-label="Likert scale for Expressiveness">
                     <option value="1">1 - Not Expressive</option>
