--- a/index.html
+++ b/index.html
@@ -339,11 +339,10 @@
   </section>
 
   <!-- final Section -->
-  <section id="files" class="section bg-light">
+<!--   <section id="files" class="section bg-light">
     <div class="container">
       <h2 class="text-center">Conversations</h2>
       <div class="file-container">
-        <!-- Round buttons for each file -->
         <a href="final/6.html" class="btn round-button">1</a>
         <a href="finals/session_4.html" class="btn round-button">4</a>
         <a href="finals/session_5.html" class="btn round-button">5</a>
@@ -397,7 +396,7 @@
           <a href="finals/session_150.html" class="btn round-button">150</a></a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Footer -->
   <footer class="bg-dark text-white py-3 text-center">
