--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ConvTrave 3.0 | IITD</title>
+  <title>ConvTrave 6.0 | IITD</title>
   <link rel="icon" type="image/x-icon" href="/img/icon.png">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -339,7 +339,7 @@
   </section>
 
   <!-- final Section -->
-<!--   <section id="files" class="section bg-light">
+<section id="files" class="section bg-light">
     <div class="container">
       <h2 class="text-center">Conversations</h2>
       <div class="file-container">
@@ -396,7 +396,7 @@
           <a href="finals/session_150.html" class="btn round-button">150</a></a>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- Footer -->
   <footer class="bg-dark text-white py-3 text-center">
