--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <div class="container">
       <h2 class="text-center">Conversations</h2>
       <div class="file-container">
-        <a href="final/6.html" class="btn round-button">1</a>
+        <a href="final/session_1.html" class="btn round-button">1</a>
         <a href="finals/session_4.html" class="btn round-button">4</a>
         <a href="finals/session_5.html" class="btn round-button">5</a>
         <a href="finals/session_6.html" class="btn round-button">6</a>
