--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   </section>
 
   <!-- final Section -->
-<section id="files" class="section bg-light">
+<!-- <section id="files" class="section bg-light">
     <div class="container">
       <h2 class="text-center">Conversations</h2>
       <div class="file-container">
@@ -313,7 +313,7 @@
           <a href="finals/session_150.html" class="btn round-button">150</a></a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Footer -->
   <footer class="bg-dark text-white py-3 text-center">
