--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <h2 class="text-center">About Us</h2>
       <p class="text-center">We are a team of researchers working in the field of mental health, broadly on
         counselling-based therapy, intervention, and psychotherapy using AI and NLP. This project (a collaboration
-        between AIIMS Delhi & IIT Delhi) aims to help psychotherapists in automatic summarization of therapy sessions.
+        between AIIMS Delhi & IIT Delhi) aims to help psychotherapists in the automatic summarization of therapy sessions.
       </p>
     </div>
   </section>
@@ -200,134 +200,52 @@
                 <tr>
                   <th>Criterion</th>
                   <th>Description</th>
-                  <th>Likert Scale (1-5)</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>Comprehensiveness</td>
-                  <td>Extent to which the summary covers all important aspects of the conversation, providing a complete
-                    and holistic overview.</td>
-                  <td>
-                    <select class="form-select" aria-label="Likert scale for Comprehensiveness">
-                      <option value="1">1 - Least Complete</option>
-                      <option value="2">2 - Poor</option>
-                      <option value="3">3 - Neutral</option>
-                      <option value="4">4 - Good</option>
-                      <option value="5">5 - Fully Complete</option>
-                    </select>
-                  </td>
+                  <td>Extent to which the conversation covers all important aspects of the conversation, providing a complete
+                    and a holistic overview.</td>
                 </tr>
                 <tr>
                   <td>Professionalism</td>
-                  <td>Degree to which the summary maintains a professional tone, language, and demeanor appropriate for
+                  <td>Degree to which the conversation maintains a professional tone, language, and demeanor appropriate for
                     a therapeutic context.</td>
-                  <td>
-                    <select class="form-select" aria-label="Likert scale for Professionalism">
-                      <option value="1">1 - Not Professional</option>
-                      <option value="2">2 - Poor</option>
-                      <option value="3">3 - Neutral</option>
-                      <option value="4">4 - Good</option>
-                      <option value="5">5 - Highly Professional</option>
-                    </select>
-                  </td>
                 </tr>
                 <tr>
                   <td>Authenticity</td>
-                  <td>How well the summary reflects the genuine nature and intent of the original conversation,
+                  <td>How well the conversation reflects the genuine nature and intent of the original conversation,
                     preserving its authenticity.</td>
-                  <td>
-                    <select class="form-select" aria-label="Likert scale for Authenticity">
-                      <option value="1">1 - Not Authentic</option>
-                      <option value="2">2 - Poor</option>
-                      <option value="3">3 - Neutral</option>
-                      <option value="4">4 - Good</option>
-                      <option value="5">5 - Highly Authentic</option>
-                    </select>
-                  </td>
                 </tr>
                 <tr>
                   <td>Safety</td>
-                  <td>Ensures the summary does not include harmful, misleading, or unsafe content and maintains a
+                  <td>Ensures the conversation does not include harmful, misleading, or unsafe content and maintains a
                     supportive environment.</td>
-                  <td>
-                    <select class="form-select" aria-label="Likert scale for Safety">
-                      <option value="1">1 - Unsafe</option>
-                      <option value="2">2 - Poor</option>
-                      <option value="3">3 - Neutral</option>
-                      <option value="4">4 - Good</option>
-                      <option value="5">5 - Very Safe</option>
-                    </select>
-                  </td>
                 </tr>
                 <tr>
                   <td>Content</td>
-                  <td>Quality and relevance of the information included in the summary, ensuring it is meaningful and
+                  <td>Quality and relevance of the information included in the conversation, ensuring it is meaningful and
                     appropriate.</td>
-                  <td>
-                    <select class="form-select" aria-label="Likert scale for Content">
-                      <option value="1">1 - Poor Content</option>
-                      <option value="2">2 - Below Average</option>
-                      <option value="3">3 - Neutral</option>
-                      <option value="4">4 - Good</option>
-                      <option value="5">5 - Excellent Content</option>
-                    </select>
-                  </td>
                 </tr>
                 <tr>
                   <td>Directiveness</td>
-                  <td>Degree to which the summary provides clear direction or guidance, as appropriate for the context.
-                  </td>
-                  <td>
-                    <select class="form-select" aria-label="Likert scale for Directiveness">
-                      <option value="1">1 - Not Directive</option>
-                      <option value="2">2 - Poor</option>
-                      <option value="3">3 - Neutral</option>
-                      <option value="4">4 - Good</option>
-                      <option value="5">5 - Highly Directive</option>
-                    </select>
+                  <td>Degree to which the conversation provides clear direction or guidance, as appropriate for the context.
                   </td>
                 </tr>
                 <tr>
                   <td>Exploratoriness</td>
-                  <td>Extent to which the summary encourages exploration of thoughts, feelings, or issues, reflecting an
+                  <td>Extent to which the conversation encourages exploration of thoughts, feelings, or issues, reflecting an
                     open and inquisitive approach.</td>
-                  <td>
-                    <select class="form-select" aria-label="Likert scale for Exploratoriness">
-                      <option value="1">1 - Not Exploratory</option>
-                      <option value="2">2 - Poor</option>
-                      <option value="3">3 - Neutral</option>
-                      <option value="4">4 - Good</option>
-                      <option value="5">5 - Highly Exploratory</option>
-                    </select>
-                  </td>
                 </tr>
                 <tr>
                   <td>Supportiveness</td>
-                  <td>How well the summary conveys empathy, encouragement, and support, fostering a positive therapeutic
+                  <td>How well the conversation conveys empathy, encouragement, and support, fostering a positive therapeutic
                     environment.</td>
-                  <td>
-                    <select class="form-select" aria-label="Likert scale for Supportiveness">
-                      <option value="1">1 - Not Supportive</option>
-                      <option value="2">2 - Poor</option>
-                      <option value="3">3 - Neutral</option>
-                      <option value="4">4 - Good</option>
-                      <option value="5">5 - Highly Supportive</option>
-                    </select>
-                  </td>
                 </tr>
                 <tr>
                   <td>Expressiveness</td>
-                  <td>Clarity and effectiveness in conveying emotions, intentions, and key points within the summary.
-                  </td>
-                  <td>
-                    <select class="form-select" aria-label="Likert scale for Expressiveness">
-                      <option value="1">1 - Not Expressive</option>
-                      <option value="2">2 - Poor</option>
-                      <option value="3">3 - Neutral</option>
-                      <option value="4">4 - Good</option>
-                      <option value="5">5 - Highly Expressive</option>
-                    </select>
+                  <td>Clarity and effectiveness in conveying emotions, intentions, and key points within the conversation.
                   </td>
                 </tr>
               </tbody>
